#261 fix Alignement

--- a/front-end/src/app/quiz/choixQuiz/choixQuiz.component.scss
+++ b/front-end/src/app/quiz/choixQuiz/choixQuiz.component.scss
@@ -1,53 +1,35 @@
 .card {
     height: 300px;
-    width: 300px;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    display: grid;
-    grid-template-rows: 50px 200px 50px;
+    min-width: 300px;
+    width: auto;
+    background-color: lightgray;
+    border: solid black 2px;
+    border-radius: 10px;
+    margin: 5px;
     cursor: pointer;
+    display: grid;
+    grid-template-rows: 50px 250px;
 }
 
 #nom {
-    height: 100px;
-    width: 300px;
-    border: solid black 2px;
-    border-radius: 10px 10px 0 0;
-    background-color: lightgray;
     grid-row: 1;
-    text-align: center;
+    background-color: lightgray;
+    border-bottom: solid black 2px;
+    border-radius: 10px 10px 0 0;
     font-family: "OpenDyslexic", sans-serif;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #imageQuiz {
-    height: 200px;
-    width: 300px;
-    border: solid black 2px;
-    border-radius: 0 0 10px 10px;
     grid-row: 2;
+    border-radius: 0 0 8px 8px;
 }
 
 img {
     width: 100%;
     height: 100%;
-    border-radius: 0 0 8px 8px;
     object-fit: cover;
-}
-
-#theme {
-    height: 100px;
-    width: 300px;
-    border: solid black 2px;
-    border-radius: 10px 10px 0 0;
-    background-color: lightgray;
-    grid-row: 3;
-    text-align: center;
-    font-family: "OpenDyslexic", sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
